Finished with CharacterFactory methods